--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-grayscale.git"
+  },
+  "dependencies": {
+    "github-calendar": "^1.1.10"
   }
 }
